--- a/src/assets/scss/_banner.scss
+++ b/src/assets/scss/_banner.scss
@@ -51,7 +51,7 @@
       }
     }
     h4 {
-      font-family: "Cormorant Garamond";
+      font-family: $josefin;
       font-size: 18px;
       font-weight: 600;
 
@@ -967,12 +967,12 @@
     }
     h3 {
      
-      font-family: "Cormorant Garamond";
+      font-family: $josefin;
       font-size: 43px;
-      font-weight :bold;
+      font-weight :600;
       margin: 60px 0px 0px 0;
 
-      color: black;
+      color: #395748;
       @media #{$md-layout} {
         font-size: 35px;
       }
@@ -981,13 +981,13 @@
       }
     }
     h4 {
-      font-family: "Cormorant Garamond";
+      font-family: $josefin;
       font-size: 22px;
       font-weight: 500;
 
       margin: 22px 0 94px;
 
-      color: #010101;
+      color: #395748;
      
       @media #{$lg-layout} {
         margin: 22px 0 34px;
@@ -1004,13 +1004,13 @@
       }
     }
     a {
-      font-size: 14px;
+      font-size: 28px;
 
-      display: inline-block;
+      display: inline-flex;
 
-      width: 28px;
-      height: 28px;
-
+      width: 38px;
+      height: 38px;
+align-items: center;
       text-align: center;
 
       color: #81938A;
